@startuml
set separator ::

class ren::Shader {
	+create(vert, frag)
	+destroy()
	..
	+use()
	..
	+setUniform(name, value)
	--
	{static} -CheckCompileErrors(shader)
	{static} -CheckLinkingErrors(program)
	..
	-id: uint
}

class ren::TextureFormat {
	+filtered: bool
	+textureFormat: int
	+sourceFormat: int
	+mipmaps: int
}
hide TextureFormat methods

class ren::Texture {
	+create(width, height, data, format)
	+create(fileName, filtered, mipmaps)
	+create()
	+destroy()
	..
	+use(index)
	..
	+getWidth() : int
	+getHeight() : int
	+getId() : uint
	--
	-width: int
	-height: int
	-id: uint
}

class ren::Material {
	+create(&shader)
	..
	+use()
	..
	+addTexture(index, &texture)
	+setUniform(name, value)
	--
	-shader: &Shader
	-textures: &Texture[]
	-uniforms: map<str, variant>
}

class ren::Vertex {
	+position: Vec3
	+color: Vec3
	+atlas: Vec2
	+normal: Vec3
}
hide Vertex methods

class ren::Mesh {
	+create()
	+destroy()
	..
	+addVertex(vertex)
	+addGeometry(gd)
	..
	+clear()
	+draw()
	--
	-vao: uint
	-vbo: uint
	-vertices: Vertex[]
}

class ren::RenderAssetManager {
	+initFromConfig(fileName)
	..
	+createShader(name) : &Shader
	+createTexture(name) : &Texture
	+createMaterial(name) : &Material
	+createMesh(name) : &Mesh
	+createFont(name) : &Font
	+destroy()
	..
	+getShader(name) : &Shader
	+getTexture(name) : &Texture
	+getMaterial(name) : &Material
	+getMesh(name) : &Mesh
	+getFont(name) : &Font
	--
	-stringToShader(configLine)
	-stringToTexture(configLine)
	-stringToMaterial(configLine1, configLine2)
	-stringToFont(configLine)
	..
	-shaders: map<str, Shader>
	-textures: map<str, Texture>
	-materials: map<str, Material>
	-meshes: map<str, Mesh>
	-fonts: map<str, Font>
}

class main {
	input: Input
	ram: RenderAssetManager
	game: Game
}
hide main circle
hide main methods

Texture <-down- TextureFormat

RenderAssetManager *-down- Shader
RenderAssetManager *-down- Texture
RenderAssetManager *-left- Material
RenderAssetManager *-right- Mesh

Material <-- Shader
Material <-- Texture

Mesh <-down- Vertex

main *-- RenderAssetManager

@enduml
